Disable file limits in conf

--- a/image/clamd.conf
+++ b/image/clamd.conf
@@ -525,7 +525,8 @@ User clamav
 # Note: disabling this limit or setting it too high may result in severe damage
 # to the system.
 # Default: 400M
-#MaxScanSize 1000M
+# Modified by Xenit
+MaxScanSize 0
 
 # Files larger than this limit won't be scanned. Affects the input file itself
 # as well as files contained inside it (when the input file is an archive, a
@@ -536,7 +537,8 @@ User clamav
 # Technical design limitations prevent ClamAV from scanning files greater than
 # 2 GB at this time.
 # Default: 100M
-#MaxFileSize 400M
+# Modified by Xenit
+MaxFileSize 0
 
 # Nested archives are scanned recursively, e.g. if a Zip archive contains a RAR
 # file, all files within it will also be scanned. This options specifies how
