Set all ClamAV size limits to 2GB

--- a/image/clamd.conf
+++ b/image/clamd.conf
@@ -50,7 +50,8 @@ LogTime yes
 
 # Enable verbose logging.
 # Default: no
-#LogVerbose yes
+# Modified by Xenit
+LogVerbose yes
 
 # Enable log rotation. Always enabled when LogFileMaxSize is enabled.
 # Default: no
@@ -130,7 +131,8 @@ TCPSocket 3310
 # Close the connection when the data size limit is exceeded.
 # The value should match your MTA's limit for a maximum attachment size.
 # Default: 100M
-#StreamMaxLength 25M
+# Modified by Xenit
+StreamMaxLength 2048M
 
 # Limit port range.
 # Default: 1024
@@ -526,7 +528,7 @@ User clamav
 # to the system.
 # Default: 400M
 # Modified by Xenit
-MaxScanSize 0
+MaxScanSize 2048M
 
 # Files larger than this limit won't be scanned. Affects the input file itself
 # as well as files contained inside it (when the input file is an archive, a
@@ -538,7 +540,7 @@ MaxScanSize 0
 # 2 GB at this time.
 # Default: 100M
 # Modified by Xenit
-MaxFileSize 0
+MaxFileSize 2048M
 
 # Nested archives are scanned recursively, e.g. if a Zip archive contains a RAR
 # file, all files within it will also be scanned. This options specifies how
