[BNPPFSLA-1108] Revert test publish changes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           arguments: :buildDockerImage
       - name: Publish docker image
-        
+        if: ${{ startsWith(github.ref, 'refs/heads/main') }}
         uses: gradle/gradle-build-action@v2.3.0
         env:
           DOCKER_USER: ${{ secrets.DOCKER_USER }}
